<?xml version="1.0"?>
<package format="2">
  <name>Barcode_Cam</name>
  <version>0.1.0</version>
  <description>Barcode_Cam package</description>
  <maintainer email="peter.pan@vicommtech.com">user</maintainer>
  <license>Apache 2.0</license>
  <author >peterpan</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
